# jerboa

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Toolchain-mingw32.cmake  ack.jb  build-dist.sh  build-win32-dist.sh  build-win32.sh  build_opt.sh  cairo_helloworld.jb  example.txt  game.jb  gc.c  gc.h  gears.jb  genlibs.sh  geom.jb  language.c  language.h  minheap.jb  object.c  object.h  pangocairo_helloworld.jb  parser.c  parser.h  pong.jb  repl.c  sched.jb  sdl_helloworld.jb  sound.jb  swig_tools.jb  swig_xml_to_c.jb  swigify.sh  test.c  test.jb  test.sh  test4.jb  util.c  (+2 more)
c/: freetype.h  glu.h  harfbuzz_ft.h
rdparse/: CMakeLists.txt
rdparse/include/rdparse/: parser.h  util.h
rdparse/src/: parser.c  util.c
src/: core.h  gc.c  gc.h  hash.c  hash.h  jerboa.c  language.c  language.h  lcgtest.c  object.c  object.h  parser.c  parser.h  print.c  print.h  repl.c  static_keys.c  static_keys.h  static_keys.txt  test.c  trie.c  trie.h  util.c  util.h  win32_compat.c  win32_compat.h
src/vm/: builder.c  builder.h  call.c  call.h  cfg.c  cfg.h  dump.c  dump.h  ffi.c  ffi.h  instr.c  instr.h  myjit-lib.c  myjit.c  myjit.h  optimize.c  optimize.h  runtime.c  runtime.h  slots.txt  vm.c  vm.h
src/vm/instrs/: alloc_static_object.h  int_cmp.h  int_eq.h  return.h  test.h  testbr.h
tests/: CMakeLists.txt  array_compare.jb  array_conditional.jb  array_iterator.jb  array_loop.jb  array_splice.jb  basic_math.jb  basic_syntax.jb  boolean_and.jb  boolean_composite.jb  boolean_negation.jb  boolean_or.jb  breakcont.jb  cond_access.jb  fail_fun_type_constraint_opt.jb  fail_obj_type_constraint.jb  fail_obj_type_constraint2.jb  fail_obj_type_constraint3.jb  fail_require_missing.jb  fail_reserved_identifier.jb  fail_var_inaccessible_after_if.jb  fail_var_inaccessible_after_while.jb  fail_var_type_constraint.jb  floatmod.jb  fun_type_constraint.jb  instanceof.jb  join.jb  negated_ops.jb  obj_is_test.jb  obj_type_constraint.jb  obj_type_constraint_bug1.jb  opt_instanceof_constraint.jb  print.jb  recursive_compare.jb  stack_cleanup_alloc.jb  strange_bug.jb  string_find.jb  string_slice.jb  string_split.jb  unicode.jb  (+3 more)
vm/: builder.c  builder.h  call.c  call.h  dump.c  dump.h  ffi.c  ffi.h  instr.c  instr.h  optimize.c  optimize.h  runtime.c  runtime.h
